# treehacks-2026

./: .env.example  .gitignore  DEPLOYMENT.md  PAYMENT_COMPARISON.md  PITCH.md  PRICING.md  PRICING_SUMMARY.md  QUALITY_CONTROL.md  QUICKSTART.md  README.md  RENDER_VERCEL_QUICKSTART.md  START_SERVERS.md  SUPABASE_SETUP.md  VISA_INTEGRATION.md  VISA_QUICKSTART.md  VISA_TESTING_GUIDE.md  idea.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pitch.txt  render.yaml  start-backend.sh  stop-backend.sh  vercel.json
agent-sdk/: README.md  agent_runner.py  orchestrator_agent.py  requirements.txt  run_all.py  scenarios.py  shopping_agent.py  tax_agent.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  ARCHITECTURE.md  agent.py  api.py  commerce.py  config.py  debug_elastic.py  elastic_client.py  matcher.py  models.py  orchestrator.py  pricing.py  query_decomposer.py  recomposer.py  render.yaml  requirements.txt  sanitizer.py  setup_elastic.py  test_api.py  test_e2e.py  test_elastic_connection.py  test_end_to_end.py  test_loading.py  test_quality_control.py  update_pricing.py  verify_keys.py  visa_payments.py  workflow_loader.py  workflows.json
components/: AgentChat.module.css  AgentChat.tsx  Background.tsx  Dashboard.module.css  Dashboard.tsx  Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  HowItWorks.module.css  HowItWorks.tsx  Marketplace.module.css  Marketplace.tsx  Nav.module.css  Nav.tsx  PricingBreakdown.module.css  PricingBreakdown.tsx  PurchaseModal.module.css  PurchaseModal.tsx  Tools.module.css  Tools.tsx  VisaPayment.tsx  WorkflowCard.module.css  WorkflowCard.tsx  WorkflowVisualizer.module.css  WorkflowVisualizer.tsx
demo/: README.md  benchmark_results.csv  benchmark_results.json  benchmark_suite.py  demo_results.json  run_demo.py  with_marktools.py  (+1 more)
marktools/: LICENSE  README.md  pyproject.toml
marktools/src/marktools/: __init__.py  client.py  exceptions.py  models.py  tools.py
marktools/tests/: test_marktools.py
(+35 files in other folders)
