[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marktools"
version = "1.0.0"
description = "SDK for the Mark AI Agent Workflow Marketplace — search, buy, and rate pre-solved reasoning workflows for your AI agents."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Archit Akhaire"},
]
keywords = [
    "ai",
    "agents",
    "marketplace",
    "workflows",
    "tools",
    "llm",
    "claude",
    "openai",
    "langchain",
    "mcp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.1.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://mark.ai"
Documentation = "https://docs.mark.ai"
Repository = "https://github.com/akhaire21/treehacks-2026"
Issues = "https://github.com/akhaire21/treehacks-2026/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/marktools"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
